--- a/css/home-styles.scss
+++ b/css/home-styles.scss
@@ -197,6 +197,7 @@
             // width: 80%;
             width: 70%;
             // max-width: 150px;
+            max-width: 220px;
             margin: 0 auto;
 
             font-size: 1em;
