--- a/css/home-styles.scss
+++ b/css/home-styles.scss
@@ -133,14 +133,14 @@
     max-width: $maxWidth;
     margin: 0 auto;
     
-    padding: 4em 0 0;
+    padding: 0.8em 0 0;
+    // padding: 4em 0 0;
     // position: absolute;
     // bottom: 0;
     // left: 50%;
     // transform: translate(-50%, 0%) scale(0.9);
     transform: scale(0.9);
     opacity: 0;
-    z-index: 10;
 
     .title-container {
         width: 100%;
@@ -232,7 +232,8 @@
     background-repeat: no-repeat;
     // filter: grayscale(0.8);
 
-    z-index: 5;
+    // z-index: 5;
+    z-index: 0;
 
     // animation: animPicture 2s infinite ease-in-out;
 }
@@ -343,6 +344,11 @@
 // Media Queries
 
 @media (orientation: landscape) {
+    .right-panel,
+    .left-panel {
+        background-size: 130%;
+    }
+
     .main-container {
         flex-direction: row;
         flex-wrap: wrap;
@@ -363,7 +369,8 @@
 // Iphone 6/7/8
 @media (min-width: $breakOneWidth) and (min-height: $breakOneHeight) {
     .victor-picture {
-        min-height: 65vh;
+        // min-height: 65vh;
+        min-height: 55vh;
     }
 
     .main-container .sub-paragraph {
@@ -392,7 +399,8 @@
 // Iphone 6/7/8 Plus
 @media (min-width: $breakTwoWidth) and (min-height: $breakTwoHeight) {
     .victor-picture {
-        min-height: 70vh;
+        // min-height: 70vh;
+        min-height: 60vh;
     }
 }
 
@@ -404,11 +412,21 @@
 
     .victor-picture {
         margin: -3vh auto 0;
+        min-height: 60vh;
+    }
+}
+
+// Iphone X Landscape
+@media (min-width: $breakThreeHeight) and (min-height:$breakThreeWidth) and (orientation: landscape) {
+    .right-panel,
+    .left-panel {
+        background-size: 110%;
     }
 }
 
 // Ipad
 @media (min-width: $breakFourWidth) and (min-height: $breakFourHeight) {
+        
     .main-container {
         .title-container h3 {
             font-size: 5em;
@@ -425,8 +443,10 @@
         }
 
         .victor-picture {
-            min-height: 50vh;
-            background-size: 70%;
+            // min-height: 50vh;
+            // background-size: 70%;
+            min-height: 55vh;
+            background-size: 60%;
         }
     } 
 }
@@ -458,6 +478,8 @@
 // Ipad Pro
 @media (min-width: $breakFiveWidth) and (min-height: $breakFiveHeight) {
     .main-container {
+        padding: 3em 0 0;
+        
         .victor-picture {
             margin: 0vh auto 0;
             min-height: 60vh;
