--- a/css/home-styles.scss
+++ b/css/home-styles.scss
@@ -197,7 +197,7 @@
             // width: 80%;
             width: 70%;
             // max-width: 150px;
-            max-width: 220px;
+            max-width: 265px;
             margin: 0 auto;
 
             font-size: 1em;
@@ -422,6 +422,12 @@
     .left-panel {
         background-size: 110%;
     }
+
+    .main-container .victor-picture {
+        margin: -20vh auto 0;
+        min-height: 100vh;
+        background-size: 100%;
+    }
 }
 
 // Ipad
@@ -471,6 +477,7 @@
         .victor-picture {
             margin: -3vh auto 0;
             min-height: 90vh;
+            background-size: 100%;
         }
     }
 }
@@ -508,7 +515,15 @@
         .victor-picture {
             margin: 0vh auto 0;
             min-height: 90vh;
-            background-size: 110%;
+            // background-size: 110%;
+            background-size: 100%;
         }
+    }
+}
+
+// Desktop Big
+@media (min-width: $breakSevenWidth) {
+    .victor-picture {
+        background-size: 85%;
     }
 }
