--- a/css/about-styles.scss
+++ b/css/about-styles.scss
@@ -21,7 +21,7 @@
     // left: 50%;
     // transform: translate(-50%, 0%) scale(0.9);
     transform: scale(0.9);
-    // opacity: 0;
+    opacity: 0;
     z-index: 10;
 
     .text-container {
