--- a/css/work-styles.scss
+++ b/css/work-styles.scss
@@ -13,6 +13,7 @@
     width: 100%;
     max-width: $maxWidth;
     margin: 0 auto;
+    opacity: 0;
     
     padding: 0 0 0;
     z-index: 10;
@@ -63,77 +64,6 @@
     }
 }
 
-.type-of-work {
-    display: block;
-    width: 95%;
-
-    margin-left: 0%;
-    padding: 1em 0;
-
-    transition: 0.5s;
-
-    .project-category-block {
-        display: block;
-        width: 100%;
-
-        .title-project-category {
-            display: block;
-            width: 100%;
-            padding: 1em 0;
-
-            font-size: 1.4em;
-            color: $colorText;
-            text-align: left;
-        }
-
-        .gallery {
-            // background: #EEE;
-            .gallery-cell {
-                width: 240px;
-                height: 200px;
-                margin-right: 10px;
-                // background: #8C8;
-                // counter-increment: gallery-cell;            
-            }
-        }
-
-        .project-block {
-            .project-pic {
-                display: block;
-                width: 100%;
-                height: 160px;
-
-                background: red;
-            }
-
-            .project-title {
-                display: block;
-                width: 100%;
-                padding: 0.5em;
-
-                font-size: 1em;
-                color: $colorText;
-            }
-
-            &:hover {
-                .project-title {
-                    text-decoration: underline;
-                }
-            }
-        }
-
-        /* cell number */
-        // .gallery-cell:before {
-        //     display: block;
-        //     text-align: center;
-        //     content: counter(gallery-cell);
-        //     line-height: 200px;
-        //     font-size: 80px;
-        //     color: white;
-        // }
-    }
-}
-
 .all-work {
     display: block;
     width: 95%;
@@ -175,24 +105,47 @@
             .project-pic {
                 display: block;
                 width: 100%;
-                height: 225px;
+                height: 240px;
     
                 background: red;
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;                
             }
-    
-            .project-title {
-                display: block;
+
+            .text-pro-container {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                flex-wrap: wrap;
                 width: 100%;
-                padding: 0.5em;
-    
-                font-size: 1.2em;
-                color: $colorText;
+                padding: 1em 0;
+
+                .project-title, .category-title {
+                    display: block;
+                    width: 60%;
+
+                    font-size: 1.2em;
+                    text-align: left;
+                    color: $colorText;
+                }
+                
+                .category-title {
+                    width: 40%;
+
+                    font-size: 1em;
+                    text-align: right;
+                    color: $colorTextAlt;
+                }
             }
+    
 
             &:hover {
+                .project-pic {
+                    background-size: 120% !important;
+                    transition: 0.3s !important;
+                }
+
                 .project-title {
                     text-decoration: underline;
                 }
@@ -257,6 +210,7 @@
             .all-work-project-container {
                 .all-work-project-block {
                     width: 48%;
+                    padding: 0 0 2em;
                 }
             }
         } 
@@ -273,6 +227,9 @@
 
 // Iphone 6/7/8 Plus
 @media (min-width: $breakTwoWidth) and (min-height: $breakTwoHeight) {
+    .all-work .all-work-project-container .all-work-project-block .project-pic {
+        height: 260px;
+    }
 }
 
 // Iphone 6/7/8 Plus Landscape
@@ -339,6 +296,7 @@
             .all-work-project-container {
                 .all-work-project-block {
                     width: 48%;
+                    padding: 0 0 2em;
                 }
             }
         }
@@ -347,27 +305,35 @@
 
 // Ipad Landscape
 @media (min-width: $breakFourHeight) and (min-height: $breakFourWidth) and (orientation: landscape) {
-    .main-container {
-        .all-work {
-            .all-work-project-container {
-                .all-work-project-block {
-                    width: 31%;
-                }
-            }
-        }
+    // .main-container {
+    //     .all-work {
+    //         .all-work-project-container {
+    //             .all-work-project-block {
+    //                 width: 31%;
+    //             }
+    //         }
+    //     }
+    // }
+
+    .all-work .all-work-project-container .all-work-project-block .project-pic {
+        height: 330px;
     }
 }
 
 // Ipad Pro
 @media (min-width: $breakFiveWidth) and (min-height: $breakFiveHeight) {
-    .main-container {
-        .all-work {
-            .all-work-project-container {
-                .all-work-project-block {
-                    width: 31%;
-                }
-            }
-        }
+    // .main-container {
+    //     .all-work {
+    //         .all-work-project-container {
+    //             .all-work-project-block {
+    //                 width: 31%;
+    //             }
+    //         }
+    //     }
+    // }
+
+    .all-work .all-work-project-container .all-work-project-block .project-pic {
+        height: 330px;
     }
 }
 
@@ -377,11 +343,11 @@
         .all-work {
             .all-work-project-container {
                 .all-work-project-block {
-                    width: 31%;
-                    padding: 0 0 2em;
+                    // width: 31%;
+                    // padding: 0 0 2em;
 
                     .project-pic {
-                        height: 235px;
+                        height: 420px;
                     }
 
                     .project-title {
@@ -395,4 +361,15 @@
 
 // Desktop Big
 @media (min-width: $breakSevenWidth) {
+    .main-container {
+        .all-work {
+            .all-work-project-container {
+                .all-work-project-block {
+                    .project-pic {
+                        height: 420px;
+                    }
+                }
+            }
+        }
+    }
 }
