Add Recap 2019 Project

--- a/css/type-project-cover.scss
+++ b/css/type-project-cover.scss
@@ -70,6 +70,15 @@
     transition: 0.3s;
 }
 
+#recap2019 {
+    background: url('../img/Project-Cover/Recap2019.png');
+    background-size: 110%;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    transition: 0.3s;
+}
+
 #datamovie {
     background: url('../img/Project-Cover/DataMovie.png');
     background-size: 110%;
